turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: not found: value i
			while(getCouleurSol()!=colors(i)){
                                                      ^LangtonsAnt:4: error: not found: value i
				i=+1
                                ^LangtonsAnt:6: error: not found: value i
				if(rule(i)=='R'){
                                        ^LangtonsAnt:7: error: not found: value i
								setCouleurBrosse(colors((i+1)%colors.length));
                                                                                         ^LangtonsAnt:13: error: not found: value i
								setCouleurBrosse(colors((i+1)%colors.length));
                                                                                         ^